@@ -1,5 +1,6 @@
 MOG 1.7.8b Release date: TBD
 Fixed problems with executing R files on MAC
+Added support to load  list of R files directly from menu
 
 
 MOG 1.7.8 Release date: 7/13/2019
